--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -6,11 +6,11 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="MarkdownSnippets.MsBuild" Version="23.0.0-beta.1" />
+    <PackageReference Include="MarkdownSnippets.MsBuild" Version="23.0.2" />
     <PackageReference Include="Xunit" Version="2.4.1" />
-    <PackageReference Include="Verify.Xunit" Version="10.0.0-beta.6" />
+    <PackageReference Include="Verify.Xunit" Version="11.0.0-beta.5" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
     <PackageReference Include="ProjectDefaults" Version="1.0.54" PrivateAssets="All" />
     <ProjectReference Include="..\Verify.Cosmos\Verify.Cosmos.csproj" />
   </ItemGroup>
