--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -1,20 +1,19 @@
 image: Visual Studio 2019
 skip_commits:
-  message: /docs|Merge pull request.*/
-
+  message: /doco|Merge pull request.*/
 install:
   - ps: |
       Set-Content -Value '"C:\Program Files\Azure Cosmos DB Emulator\CosmosDB.Emulator.exe" /NoUI /NoExplorer /NoFirewall' -Path .\startCosmosDb.cmd
       Start-Process -FilePath .\startCosmosDb.cmd
       .\src\waitforport.ps1 -port 8081 -maxAttempts 4
-
 build_script:
-- ps: >-
-    dotnet build src --configuration Release
-
-    dotnet test src --configuration Release --no-build --no-restore
+- pwsh: |
+    Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
+    ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
+- dotnet build src --configuration Release
+- dotnet test src --configuration Release --no-build --no-restore
+test: off
 on_failure:
   - ps: Get-ChildItem *.received.* -recurse | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
-test: off
 artifacts:
 - path: nugets\**\*.nupkg
