--- a/src/Verify.Cosmos/Verify.Cosmos.csproj
+++ b/src/Verify.Cosmos/Verify.Cosmos.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Verify" Version="14.6.6" />
-    <PackageReference Include="ProjectDefaults" Version="1.0.61" PrivateAssets="All" />
+    <PackageReference Include="Verify" Version="14.7.0" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.62" PrivateAssets="all" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
     <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.23.0" />
