--- a/src/Verify.Cosmos/Verify.Cosmos.csproj
+++ b/src/Verify.Cosmos/Verify.Cosmos.csproj
@@ -7,7 +7,7 @@
     <PackageReference Include="Verify" Version="19.10.0" />
     <PackageReference Include="ProjectDefaults" Version="1.0.87" PrivateAssets="all" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
-    <PackageReference Include="PolySharp" Version="1.12.1" PrivateAssets="All" />
+    <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.32.0" />
   </ItemGroup>
 </Project>
