--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Version>3.0.0</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
+    <LangVersion>preview</LangVersion>
     <PackageTags>Azure, CosmosDB, Verify</PackageTags>
     <Description>Adds Verify (https://github.com/VerifyTests/Verify) support to verify Azure CosmosDB (https://docs.microsoft.com/en-us/azure/cosmos-db/)</Description>
     <NoWarn>CS1591;NU5105</NoWarn>
