--- a/src/Verify.Cosmos/Verify.Cosmos.csproj
+++ b/src/Verify.Cosmos/Verify.Cosmos.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="Verify" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Azure.Cosmos" />
